--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -28,7 +28,7 @@
     Tech stacks that I've used and have experience working with:
   </p>
   <img
-    src="https://skillicons.dev/icons?i=python,javascript,typescript,react,php,laravel,fastapi,django,tailwindcss,postgres,supabase,aws,docker,webflow"
+    src="https://skillicons.dev/icons?i=python,javascript,typescript,react,php,laravel,nodejs,fastapi,django,tailwindcss,postgres,supabase,aws,docker,webflow"
   />
 </div>
 <img
