--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -9,7 +9,8 @@ import { Icon } from 'astro-icon';
     class="mx-3"
     aria-label="Github"
     title="Github"
-    target="_blank" rel="noopener noreferrer"
+    target="_blank"
+    rel="noopener noreferrer"
   >
     <Icon
       pack="mdi"
@@ -17,23 +18,15 @@ import { Icon } from 'astro-icon';
       class="w-6 h-6 text-prime-text hover:text-prime"
     />
   </a>
-  <a
-    href="https://twitter.com/delisle_domain"
-    target="_blank"
-    class="w-6 h-6 mx-3 text-prime-text hover:text-prime"
-    aria-label="Twitter"
-    title="Twitter"
-    target="_blank" rel="noopener noreferrer"
-  >
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584l-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/></svg>
-  </a>
+
   <a
     href="https://linkedin.com/in/jay-delisle-6b922886"
     target="_blank"
     class="mx-3"
     aria-label="Linkedin"
     title="Linkedin"
-    target="_blank" rel="noopener noreferrer"
+    target="_blank"
+    rel="noopener noreferrer"
   >
     <Icon
       pack="mdi"
